--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="https://cdn-icons-png.flaticon.com/128/15713/15713438.png" alt="Snapchat">
                 <span>Snapchat</span>
             </a>
-            <a href="https://snapchat.com/t/NAmk71CS" class="button">
+            <a href="https://snapchat.com/t/NAmk71CS" class="buttonss">
                 <img src="https://cdn-icons-png.flaticon.com/128/15713/15713438.png" alt="Groupchat">
                 <span>Group</span>
             </a>
