--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
                     <img src="https://cdn-icons-png.flaticon.com/128/15713/15713438.png" alt="Groupchat">
                     <span>Group</span>
                 </a>
+ 
+                
+                <!-- WhatsApp Buttons -->
+                <a href="https://wa.me/yourphonenumber" class="button">
+                    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+                    <span>WhatsApp</span>
+                </a>
+                <a href="https://wa.me/yourgroupchatlink" class="button">
+                    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Group">
+                    <span>WhatsApp 2</span>
+                </a>
                 <a href="https://maps.app.goo.gl/DztkzNoauZe3vWTe9?g_st=com.google.maps.preview.copy" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/535/535188.png" alt="Location">
                     <span>Location</span>
