--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                     <img src="https://cdn-icons-png.flaticon.com/128/15713/15713438.png" alt="Groupchat">
                     <span>Group</span>
                 </a>
- 
+
                 
                 <!-- WhatsApp Buttons -->
-                <a href="https://wa.me/yourphonenumber" class="button">
+                <a href="https://wa.me/07502425534" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
                     <span>WhatsApp</span>
                 </a>
-                <a href="https://wa.me/yourgroupchatlink" class="button">
+                <a href="https://wa.me/07810412246" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Group">
-                    <span>WhatsApp 2</span>
+                    <span>WhatsApp Group</span>
                 </a>
                 <a href="https://maps.app.goo.gl/DztkzNoauZe3vWTe9?g_st=com.google.maps.preview.copy" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/535/535188.png" alt="Location">
