--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
                 <a href="https://wa.me/07810412246" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Group">
-                    <span>WhatsApp Group</span>
+                    <span>WhatsApp 2</span>
                 </a>
                 <a href="https://maps.app.goo.gl/DztkzNoauZe3vWTe9?g_st=com.google.maps.preview.copy" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/535/535188.png" alt="Location">
