--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </a>
                 <a href="https://www.instagram.com/dela_beauty_salon_" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
-                    <span>Instagram</span>
+                    <span>Instagram Salon</span>
                 </a>
                 <a href="https://www.instagram.com/dela_beauty_center/" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
-                    <span>Instagram Salon</span>
+                    <span>Instagram Center</span>
                 </a>
                 <a href="https://www.facebook.com/share/1ECyzv6Reg/?mibextid=wwXIfr" class="button">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
